fixed that background

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: #fafafa;
+  background: url(./Assets/Logo/Theme.jpg);
   text-align: center;
 }
 
@@ -26,6 +26,6 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: gold;
 }
 
