--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -57,3 +57,15 @@ a{
     
   }
   }
+  @media (min-width: 540px){
+    .POWERED{
+      visibility: hidden;
+    }
+    .copyright{
+      justify-content: space-evenly;
+      font-size: xx-small;
+      display: flex;
+      flex-direction:row;
+      padding-right: 2px;
+    }
+  }
