--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,22 +1,23 @@
 .home{
    opacity: 0.94;
+   padding: 60px;
+
 }
 .home__mainPicture > img{
-   margin-top: 25px;
    width: 100%;
    height: auto;
-   top: 65px;
-   margin-top: -10px;
    max-height: 70vh;
    object-fit: cover;
-
 }
 
 
 @media (max-width:500px){
-   body {
-     z-index: -1 !important;
-     padding:0px;
+   .home{
+      opacity: 0.94;
+      padding: 0px;
+      margin-top: 40px;
+      margin-bottom: 140px;
+   
    }
    .home__mainPicture > img{
      width: 100%;
@@ -24,4 +25,5 @@
      padding-bottom: -60px;
      height: auto;
  }
+
  } 
