--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,14 +1,19 @@
-.home{
-   opacity: 0.94;
-   padding: 60px;
+* {
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+   font-family: 'PT Sans', sans-serif;
 
-}
-.home__mainPicture > img{
-   width: 100%;
-   height: auto;
-   max-height: 70vh;
-   object-fit: cover;
-}
+ }
+ 
+ .home {
+   display: flex;
+   height: 90vh;
+   align-items: center;
+   justify-content: center;
+   font-size: 3rem;
+
+ }
 
 
 @media (max-width:500px){
