--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -3,17 +3,14 @@
    margin: 0;
    padding: 0;
    font-family: 'PT Sans', sans-serif;
-
  }
- 
- .home {
-   display: flex;
-   height: 90vh;
-   align-items: center;
-   justify-content: center;
-   font-size: 3rem;
-
- }
+ /* video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 100;
+} */
 
 
 @media (max-width:500px){
