--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
-  background: url(./Assets/Logo/Theme.jpg);
   text-align: center;
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -9,23 +9,23 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  /* .App-logo {
     animation: App-logo-spin infinite 20s linear;
+  } */
+  
+  .App-header {
+
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
+  
+  .App-link {
+    color: gold;
+  }
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: gold;
-}
 
