--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -1,7 +1,13 @@
 .contact{
-    background-color: #fafafa;
-    opacity: 0.9;
-    padding: 10px 80px;
+    background-image: url('../../Assets/Logo/Theme.jpg');
+    background-Position: center;
+    background-Size: cover;
+    background-Repeat: no-repeat;
+}
+.contact__background{
+  background-color: #fafafa !important;
+  opacity: 0.9;
+  padding: 10px 80px;
 }
 .contact__form {
     display: flex;
