--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -4,13 +4,9 @@
    padding: 0;
    font-family: 'PT Sans', sans-serif;
  }
- /* video {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: 100;
-} */
+ body{
+    background-image: none;
+ }
 
 
 @media (max-width:500px){
