--- a/src/Components/Cards/Cards.css
+++ b/src/Components/Cards/Cards.css
@@ -61,7 +61,7 @@
   content: attr(data-category);
   position: absolute;
   bottom: 0;
-  margin-left: 10px;
+  margin-left: 15%;
   padding: 6px 8px;
   max-width: calc((100%) - 60px);
   font-size: 12px;
@@ -105,6 +105,8 @@
     width: 84%;
     
   }
+
+
  
 }
 
@@ -112,6 +114,7 @@
   .cards__items {
     display: flex;
   }
+  
   
 }
 
