--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -7,7 +7,7 @@
 .contact__background{
   background-color: #fafafa !important;
   opacity: 0.9;
-  padding: 10px 80px;
+  margin-bottom: 40px;
 }
 .contact__form {
     display: flex;
@@ -15,7 +15,6 @@
     justify-content: center;
     width: 400px;
     margin: 0 auto;
-
   }
  
   .contact__form > h1 {
@@ -41,8 +40,6 @@
   textarea:focus {
     border: 1px solid black;
     outline: none;
-
-
   }
   
   .contact__form > textarea {
@@ -55,7 +52,6 @@
     padding-bottom: 10px;
     color: black;
     font-weight: bold;
-
 
   }
   
@@ -101,11 +97,12 @@
       padding:10px;
       align-items: center;
     }
+
     .contact__form {
       height: 60vh;
       justify-content: center;
       width: 300px;
-      margin-bottom: 20px;
+      margin-bottom: 80px;
 
     }
     .contact__form > h1 {
@@ -137,6 +134,8 @@
       margin:0px;
       font-size:20px;
     }
-  
+    .contact__P{
+     padding-bottom: 40px;
+    }
     
   }
