--- a/src/Pages/Solutions/Solutions.css
+++ b/src/Pages/Solutions/Solutions.css
@@ -1,8 +1,24 @@
 .Solutions{
-    background-color: #fafafa;
-
+    background-image: url('../../Assets/Logo/Theme.jpg');
+    background-Position: center;
+    background-Size: cover;
+    background-Repeat: no-repeat;
 }
+
+
+.Solutions__background{
+    background-color: rgba(255, 255, 255, 0.911);
+    opacity: 0.9;
+}
+
 h1{
     text-align: center;
 
+}
+#IMG12{
+    margin: 60px;
+    height: 400px;
+    width: 700px;
+    box-shadow: 5px 5px 20px -5px black;
+    border-radius: 25px;
 }
