--- a/src/Pages/Solutions/Solutions.css
+++ b/src/Pages/Solutions/Solutions.css
@@ -9,8 +9,17 @@
     background-color: rgba(255, 255, 255, 0.911);
     width: 100%;
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 80px;
 }
+
+.Solutions__h1{
+    padding:25px;
+}
+
+.Solutions__p1{
+    padding:25px;
+}
+
 .Solutions__icons{
     height: 80px;
 
