--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -7,7 +7,7 @@
 .contact__background{
   background-color: #fafafa !important;
   opacity: 0.9;
-  margin-bottom: 40px;
+  padding-bottom: 20px;
 }
 .contact__form {
     display: flex;
@@ -30,7 +30,6 @@
     border-radius: 3px;
     margin-bottom: 20px;
     border: 1px solid black;
-
     font-size: 16px;
     color: black;
     outline: none;
