--- a/src/Pages/Mission/Mission.css
+++ b/src/Pages/Mission/Mission.css
@@ -1,5 +1,6 @@
   .Mission-container {
-    height: 100vh;
+    margin: 0;
+    height: 80vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -38,15 +39,6 @@
   
     .Mission-container > p {
       font-size: 30px;
-    }
-  
-    .btn-mobile {
-      display: block;
-      text-decoration: none;
-    }
-  
-    .btn {
-      width: 100%;
     }
   }
   
