--- a/src/Pages/Mission/Mission.css
+++ b/src/Pages/Mission/Mission.css
@@ -8,6 +8,7 @@
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
     object-fit: contain;
+    padding-bottom: 40px;
   }
   
   .Mission-container > h1 {
