--- a/src/SubPages/Nonprofit/Nonprofit.css
+++ b/src/SubPages/Nonprofit/Nonprofit.css
@@ -48,4 +48,36 @@
     img{
         margin: 25px auto;
         }
+        .row{
+            padding: 0px;
+            }
+            .Nonprofit__h3{
+                padding: 10px;
+                margin: 0px;
+                width: 100%;
+                font-weight: bold;
+               text-align: center!important;
+            }
+            .Nonprofit__h4{
+                padding: 10px;
+                margin: 0px;
+                width: 100%;
+                font-weight: bold;
+                color: rgb(168, 148, 32) !important;
+               text-align: center;
+            }
+            .Nonprofit__p{
+                padding: 10px;
+                font-size:20px;
+                margin: 0px;
+                width: 100%;
+               text-align: center;
+            }
+            .Nonprofit__ul{
+                padding: 10px;
+                margin: 0px;
+                font-weight: bold;
+                text-align: left;
+            }
+        
 }
