--- a/src/Components/AboutBanner/AboutBanner.css
+++ b/src/Components/AboutBanner/AboutBanner.css
@@ -6,8 +6,8 @@ video {
   z-index: 1;
 }
 
-.hero-container {
-  height: 100vh;
+.banner-container {
+  height: 60vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -17,13 +17,13 @@ video {
   object-fit: contain;
 }
 
-.hero-container > h1 {
+.banner-container > h1 {
   color: #fff;
   font-size: 100px;
   margin-top: -100px;
 }
 
-.hero-container > p {
+.banner-container > p {
   margin-top: 8px;
   color: #fff;
   font-size: 32px;
@@ -31,41 +31,24 @@ video {
     'Lucida Sans', Arial, sans-serif;
 }
 
-.hero-btns {
-  margin-top: 32px;
-}
-
-.hero-btns .btn {
-  margin: 6px;
-}
-
 .fa-play-circle {
   margin-left: 4px;
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container > h1 {
+  .banner-container > h1 {
     font-size: 70px;
     margin-top: -150px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .hero-container > h1 {
+  .banner-container > h1 {
     font-size: 50px;
     margin-top: -100px;
   }
 
-  .hero-container > p {
+  .banner-container > p {
     font-size: 30px;
-  }
-
-  .btn-mobile {
-    display: block;
-    text-decoration: none;
-  }
-
-  .btn {
-    width: 100%;
   }
 }
