--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -1,20 +1,19 @@
-  .Mission-container {
+  .About-container {
     margin: 0;
-    height: 80vh;
+    height: 60vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.2);
     object-fit: contain;
-    padding-bottom: 40px;
+    margin-bottom: 130px;
   }
   
-  .Mission-container > h1 {
+  .About-container > h1 {
     color: #fff;
-    font-size: 100px;
-    margin-top: -100px;
+    font-size: 70px;
   }
   
   .Typewriter {
@@ -26,19 +25,19 @@
   }
   
     @media screen and (max-width: 960px) {
-    .Mission-container > h1 {
+    .About-container > h1 {
       font-size: 70px;
       margin-top: -150px;
     }
   }
   
   @media screen and (max-width: 768px) {
-    .Mission-container > h1 {
+    .About-container > h1 {
       font-size: 50px;
       margin-top: -100px;
     }
   
-    .Mission-container > p {
+    .About-container > p {
       font-size: 30px;
     }
   }
