--- a/src/Pages/Portfolio/Portfolio.css
+++ b/src/Pages/Portfolio/Portfolio.css
@@ -1,131 +1,112 @@
-.Portfolio{
-    background-Position: center;
-    background-Size: cover;
-    background-Repeat: no-repeat;
+.Portfolio {
+  background-Position: center;
+  background-Size: cover;
+  background-Repeat: no-repeat;
 }
 
-.Portfolio__background{
-    width: 100%;
-    padding-bottom: 100px;
+.Portfolio__background {
+  width: 100%;
+  padding-bottom: 100px;
 }
 
 .Portfolio-container {
-    /* margin: 0; */
-    height: 60vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    object-fit: contain;
-    /* padding-bottom: 99px; */
-    margin-bottom: 100px;
-  }
-
-  .Portfolio__row{
-      padding-top:0!important;
-      padding-bottom:0!important;
-  }
-
-  .Portfolio-container > h1 {
-    color: #fff;
-    font-size: 100px;
-    margin-top: -100px;
-  }
-  
-  .Typewriter {
-    margin-top: 8px;
-    color: #fff;
-    font-size: 32px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
-  }
-
-.Portfolio__h1{
-    padding:25px;
+  margin: 0;
+  height: 60vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  object-fit: contain;
+  margin-bottom: 41px;
 }
 
-.Portfolio__p1{
-    padding:25px;
+.Portfolio__row {
+  padding-top: 0!important;
+  padding-bottom: 0!important;
 }
 
-.Portfolio__icons{
-    height: 80px;
-
+.Portfolio-container>h1 {
+  color: #fff;
+  font-size: 100px;
 }
 
-#Portfolio__R1__col1{
-    background-color: darkgray;
-    padding: 60px;
-
+.Typewriter {
+  margin-top: 8px;
+  color: #fff;
+  font-size: 32px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+/* .background {
+  background-image: url('../../Assets/Logo/Theme.jpg');
+  background-Position: center;
+  background-Size: cover;
+  background-Repeat: no-repeat;
+} */
 
-#Portfolio__R1__col1:hover{
-    background-color: rgba(228, 213, 9, 0.37);
+/* .backgroundFilter {
+  background-color: #fafafa !important;
+  opacity: 0.9;
+  padding-bottom: 20px;
+} */
+
+.clients {
+  width: 80%;
+  margin: auto;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
-#Portfolio__R1__col2{
-    background-color: lightgray;
-    padding: 60px;
-
-}
-#Portfolio__R1__col2:hover{
-    background-color: rgba(228, 213, 9, 0.37);
-}
-#Portfolio__R1__col3{
-    background-color: darkgray;
-    padding: 60px;
-
-}
-#Portfolio__R1__col3:hover{
-    background-color: rgba(228, 213, 9, 0.37);
+.client {
+  padding: 20px;
 }
 
-
-#Portfolio__R2__col1{
-    background-color: lightgray;
-    padding: 60px;
-
-}
-#Portfolio__R2__col1:hover{
-    background-color: rgba(228, 213, 9, 0.37);
+.client img {
+  width: 100%;
+  height: 100%;
+  /* border: black solid 1px; */
+  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.2);
 }
 
-#Portfolio__R2__col2{
-    background-color: darkgray;
-    padding: 60px;
-
-}
-#Portfolio__R2__col2:hover{
-    background-color: rgba(228, 213, 9, 0.37);
-}
-#Portfolio__R2__col3{
-    background-color: lightgray;
-    padding: 60px;
-
-}
-#Portfolio__R2__col3:hover{
-    background-color: rgba(228, 213, 9, 0.37);
+.clientBtn {
+  padding: 0px;
 }
 
+.clientBtn .details {
+  padding: 20px;
+  /* margin: 20px; */
+  width: 90%;
+  height: 90%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  /* background: #f7d036b4; */
+  color: black;
+  opacity: 0;
+}
 
+.details:hover {
+  background: #f7d036b4;
+  color: black;
+  opacity: 1;
+}
 
 @media screen and (max-width: 960px) {
-    .Portfolio-container > h1 {
-      font-size: 70px;
-      margin-top: -150px;
-    }
+  .Portfolio-container>h1 {
+    font-size: 70px;
+    margin-top: -150px;
   }
-  
-  @media screen and (max-width: 768px) {
-    .Portfolio-container > h1 {
-      font-size: 50px;
-      margin-top: -100px;
-    }
-  
-    .Portfolio-container > p {
-      font-size: 30px;
-    }
+}
+
+@media screen and (max-width: 768px) {
+  .Portfolio-container>h1 {
+    font-size: 50px;
+    margin-top: -100px;
   }
-  
+  .Portfolio-container>p {
+    font-size: 30px;
+  }
+}
