--- a/src/Pages/Portfolio/Portfolio.css
+++ b/src/Pages/Portfolio/Portfolio.css
@@ -1,10 +1,12 @@
 .Portfolio {
+
   background-Position: center;
   background-Size: cover;
   background-Repeat: no-repeat;
 }
 
 .Portfolio__background {
+  
   width: 100%;
   padding-bottom: 100px;
 }
@@ -38,19 +40,6 @@
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-/* .background {
-  background-image: url('../../Assets/Logo/Theme.jpg');
-  background-Position: center;
-  background-Size: cover;
-  background-Repeat: no-repeat;
-} */
-
-/* .backgroundFilter {
-  background-color: #fafafa !important;
-  opacity: 0.9;
-  padding-bottom: 20px;
-} */
-
 .clients {
   width: 80%;
   margin: auto;
@@ -66,7 +55,7 @@
   width: 100%;
   height: 100%;
   /* border: black solid 1px; */
-  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.2); */
 }
 
 .clientBtn {
@@ -76,8 +65,8 @@
 .clientBtn .details {
   padding: 20px;
   /* margin: 20px; */
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -87,10 +76,28 @@
   opacity: 0;
 }
 
+
+.Portfolio__client__name{
+padding-top: 10%;
+font-weight: bold;
+}
+
+.Portfolio__client__industry{
+  font-weight: bold;
+  padding-top: 10%;
+}
+
+
+.Portfolio__client__description{
+  padding-top: 10%;
+}
+
 .details:hover {
-  background: #f7d036b4;
+  background: #ffffff;
   color: black;
-  opacity: 1;
+  opacity: 0.8;
+  border-radius: 5px;
+
 }
 
 @media screen and (max-width: 960px) {
