--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -9,20 +9,14 @@
 
 
   .copyright{
-    justify-content: space-evenly;
-    padding-right: 20%;      
+    /* justify-content: flex-end; */
+    align-items: left;
 
   }
   .copyright:hover{
     color: gold;
   }
-  .POWERED{
-    justify-content: space-evenly;
-    padding-left: 25%;  
-  }
-  .POWERED:hover{
-    color: gold;
-  }
+
 a{
   color:white;
   padding: 0.5rem;
@@ -48,14 +42,7 @@ a{
     flex-direction:row;
     padding-right: 2px;
   }
-  .POWERED{
-    justify-content: space-evenly;
-    display: flex;
-    flex-direction:row;
-    font-size: xx-small;
-    padding-left: 10%;
-    
-  }
+
   }
   @media (max-width: 600px) and (min-width: 540px){
     .POWERED{
