--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -1,28 +1,17 @@
-.About-container {
-  margin: 0;
-  height: 60vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.2);
-  object-fit: contain;
-  margin-bottom: 130px;
-}
 
-.About-container > h1 {
-  color: #fff;
-  font-size: 70px;
-}
 
 .Typewriter {
-  margin-top: 8px;
-  color: #fff;
+  background-color: rgb(173, 173, 173);
+  margin: 0 10%;
+  color: black;
   font-size: 32px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
 }
+
+
+
+
 
   @media screen and (max-width: 960px) {
   .About-container > h1 {
