--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -1,14 +1,12 @@
 
 
-.Typewriter {
-  background-color: rgb(173, 173, 173);
+.About__pTag {
   margin: 0 10%;
   color: black;
   font-size: 32px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
 }
-
 
 
 
