--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer{
     padding: 0.5rem;
     background-color: black;
-    color: white;
+    color: #fb0808;
     text-align: center;
     width: 100%;
     z-index: 1;
