few final touches for the night

--- a/src/Pages/Solutions/Solutions.css
+++ b/src/Pages/Solutions/Solutions.css
@@ -144,9 +144,9 @@
       }
       20%
       {
-        color: gold;
+        color: red;
         text-shadow: 0 0 7px
-        red, 0 0 20px #ff6c00;
+        gold, 0 0 20px #ff6c00;
       }
       30%
       {
@@ -155,9 +155,9 @@
       }
       35%
       {
-        color: gold;
+        color: red;
         text-shadow: 0 0 7px
-        gold, 0 0 20px #ff6c00;
+        red, 0 0 20px #ff6c00;
       }
       45%
       {
@@ -166,9 +166,9 @@
       }
       55%
       {
-        color: gold;
+        color: red;
         text-shadow: 0 0 7px
-        red, 0 0 20px #ff6c00;
+        gold, 0 0 20px #ff6c00;
       }
       70%
       {
@@ -177,9 +177,9 @@
       }
       85%
       {
-        color: gold;
+        color: red;
         text-shadow: 0 0 7px
-        red, 0 0 20px #ff6c00;
+        gold, 0 0 20px #ff6c00;
       }
       90%
       {
