--- a/src/Pages/Solutions/Solutions.css
+++ b/src/Pages/Solutions/Solutions.css
@@ -111,7 +111,7 @@
 
 .Solutions__UL {
     position: absolute;
-    top: 30%;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
@@ -123,7 +123,7 @@
     .Solutions__UL li {
       list-style: none;
       font-family: Arial, Helvetica, sans-serif;
-      font-size: 4em;
+      font-size: 100px;
       font-weight: bold;
       letter-spacing: 15px;
       text-shadow: none;
