--- a/src/Pages/Solutions/Solutions.css
+++ b/src/Pages/Solutions/Solutions.css
@@ -109,7 +109,7 @@
     background-color: rgba(228, 213, 9, 0.37);
 }
 
-.Solutions__UL {
+/* .Solutions__UL {
     position: absolute;
     top: 35%;
     left: 50%;
@@ -249,4 +249,4 @@
       font-size: 30px;
     }
   }
-  
+   */
