--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,5 +1,5 @@
 .services {
-  background-color: lightgray;
+  background-color: black;
   background-Position: center;
   background-Size: cover;
   background-Repeat: no-repeat;
@@ -32,6 +32,7 @@ color: white;
   display: flex;
   justify-content: space-evenly;
   padding: 10px;
+  padding-bottom: 30px;
   width: 100%;
   border-bottom: solid 4px gold;
 }
@@ -59,7 +60,7 @@ color: white;
 }
 
 .services__content__image img:nth-child(1):hover {
-  background-color: black;
+  background-color: white;
   border-radius: 10px;
   align-items: center;
   border-bottom: none;
