--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer{
     padding: 0.5rem;
-    background-color: black;
+    background-color: white;
     color: #fb0808;
     text-align: center;
     width: 100%;
