--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -9,7 +9,9 @@
 }
 
 a{ 
-  color:#fb0808!important;
+  /* color:#fb0808!important; */
+  /* color: black!important; */
+  color:white!important;
 }
 
 
