--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,10 @@
 .footer{
     padding: 0.5rem;
-    background-color: white;
-    color: #fb0808;
+    /* background-color: white; */
+    background-color: black;
+    /* color: #fb0808;
+    color: black!important; */
+    color: white;
     text-align: center;
     width: 100%;
     z-index: 1;
