--- a/src/Components/NewCard/Card.css
+++ b/src/Components/NewCard/Card.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 :root {
@@ -13,8 +12,6 @@
 }
 .container{
   display: flex;
-
-
 }
 
  *, ::before, ::after {
@@ -38,6 +35,7 @@ a {
 
 ul li{
   list-style-position: outside;
+  list-style-type:none;
   padding: 10px 0 10px 10px;
   text-indent: -1em;
 }
@@ -57,7 +55,7 @@ img {
 
 .card {
   width: 350px;
-  height: 550px;
+  height: 620px;
   background-color: var(--dark-color);
   border-radius: 1rem;
   padding: 2rem 2rem 0;
@@ -117,7 +115,7 @@ img {
 .card__img, 
 .card__data, 
 .card__title, 
-.card__preci, 
+.card__card__price, 
 .card__description {
   transition: .5s;
 }
@@ -135,7 +133,7 @@ img {
   margin-bottom: 0;
 }
 
-.card:hover .card__preci {
+.card:hover .card__card__price {
   transform: translateX(-6.8rem);
 }
 
