--- a/src/Components/NewCard/Card.css
+++ b/src/Components/NewCard/Card.css
@@ -10,16 +10,12 @@
   --normal-font-size: 1rem;
   --small-font-size: .875rem;
 }
-.container{
-  display: flex;
-}
-
  *, ::before, ::after {
   box-sizing: border-box;
 } 
 
 body {
-  margin: 0;
+  /* margin: 0; */
   padding: 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
@@ -36,10 +32,9 @@ a {
 ul li{
   list-style-position: outside;
   list-style-type:none;
-  padding: 10px 0 10px 10px;
+  padding: 5px 0 5px 10px;
   text-indent: -1em;
 }
-
 
 img {
   max-width: 100%;
@@ -47,7 +42,7 @@ img {
 }
 
 .container {
-   
+  display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--dark-color-lighten);
@@ -55,7 +50,7 @@ img {
 
 .card {
   width: 350px;
-  height: 620px;
+  height: 550px;
   background-color: var(--dark-color);
   border-radius: 1rem;
   padding: 2rem 2rem 0;
