--- a/src/Components/NewCard/Card.css
+++ b/src/Components/NewCard/Card.css
@@ -92,8 +92,10 @@ img {
   opacity: 0;
 }
 
-.card__button {
+.card__button_order {
   display: block;
+  display: inline;
+  margin: 10px;
   width: max-content;
   padding: 1.125rem 2rem;
   background-color: var(--first-color);
@@ -103,11 +105,26 @@ img {
   transition: .2s;
   opacity: 0;
 }
-
-.card__button:hover {
-  box-shadow: 0 18px 40px -12px rgba(242,162,12,.35);
+.card__button_call{
+  display: block;
+  display: inline;
+  margin: 10px;
+  width: max-content;
+  padding: 1.125rem 2rem;
+  background-color: var(--white-color);
+  color: var(--dark-color)!important;
+  border-radius: .5rem;
+  font-weight: 600;
+  transition: .2s;
+  opacity: 0;
 }
 
+.card__button_order:hover {
+  box-shadow: 0 18px 40px -12px rgba(242,162,12,.35);
+}
+.card__button_call:hover {
+  box-shadow: 0 18px 40px -12px rgba(242,162,12,.35);
+}
 .card__img, 
 .card__data, 
 .card__title, 
@@ -134,7 +151,7 @@ img {
 }
 
 .card:hover .card__description, 
-.card:hover .card__button {
+.card:hover .card__button_order, .card__button_call {
   transition-delay: .2s;
   opacity: 1;
 }
@@ -193,7 +210,18 @@ img {
   opacity: 0;
 }
 
-.card__button {
+.card__button_call {
+  display: block;
+  width: max-content;
+  padding: 1.125rem 2rem;
+  background-color: var(--first-color);
+  color: var(--white-color);
+  border-radius: .5rem;
+  font-weight: 600;
+  transition: .2s;
+  opacity: 0;
+}
+.card__button_order {
   display: block;
   width: max-content;
   padding: 1.125rem 2rem;
